assets/styles/styles.css
/* ... */
.container h2:hover {
  border-left: 4px solid var(--balance);
  padding-left: 25px;
  background: rgba(32, 196, 152, 0.05);
  color: #fff;
  transform: scale(1.02);
}

.project-header {
  cursor: var(--cursor-click);
}

.project-header:hover {
  cursor: var(--cursor-click);
}

@keyframes font-color-h2 {
  0%,100% {color: var(--accent);}
  25% {color: var(--balance);}
  50% {color: var(--counter);}
}

.container h2:hover:before {
  transform: translateY(-3px) translateX(-4px);
  opacity: 1;
  animation: floaty 1s ease-in-out infinite, font-color-h2 1s ease-in-out infinite;
}

.container h2:hover:after {
  transform: translateY(3px) translateX(4px);
  opacity: 1;
  animation: floaty 1s ease-in-out infinite, font-color-h2 1s ease-in-out infinite;
}

.quick-summary {
  font-size: 1rem;
  width: 70%;
}

.quick-summary:before {
  color: var(--accent);
  font-size: 1.2rem;
  content: "// overview // "
}

.project-details /*> p:first-of-type*/ {
  /*text-indent: 3em;*/
}

.project-details {
  width: 70%;
}

.haiku {
  font-family: 'DynaPuff', system-ui, sans-serif;
  font-style: ; /*change*/
  font-size: 1.2rem;
  color: var(--text);
  line-height: 1.6;
  text-align: center;
  padding-left: 20px;
  padding-right: 20px;
  position: relative;
  border-left: 3px solid var(--balance);
  border-right: 3px solid var(--balance);
  margin: 40px 0;
  max-width: 600px;
}

.haiku:before {
  content: "「";
  white-space: pre;
  color: var(--accent);
  display: block;
  text-align: left;
  font-size: 1.5rem;
  margin-bottom: 10px;
}

.haiku:after {
  content: "」";
  color: var(--accent);
  display: block;
  text-align: right;
  font-size: 1.5rem;
}

.mii-chat {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  justify-content: flex-start;
  gap: 15px;
  float: right;
  width: 25%;
  clear: right;
  margin: 20px 0;
  background: none;
}
.mii-chat .chat-avatar {
  width: 60px;
  margin-bottom: 0;
  border-radius: 12px;
  border-color: var(--counter);
}

.chat-bubble {
  background: rgba(255, 255, 255, 0.05);
  padding: 0 10px;
  border-radius: 12px;
  border-right: 4px solid var(--accent);
  max-width: 100%;
  margin-left: 0;
}

.project-image {
  width: 70%;
}

code {
  background-color: var(--bg-code);
  color: var(--counter);
  padding: 2px 6px;
  border-radius: 4px;
  font-family: 'Bricolage', monospace;
  font-size: 0.95em;
  border: 1px solid #333;
  text-shadow: 1px 1px 6px var(--bg);
}

ul li::marker {
  content: "🢩 ";
  color: var(--accent);
  font-size: 0.9rem;
}

ul {
  padding-left: 20px;
}

img.doc {
  max-width: 90%;
  height: auto;
  max-height: 800px;
  display: block;
  margin: 1.5rem auto;
  border-radius: 4px;
  border: 4px solid rgba(255, 0, 102, 0.4);
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
}

@media (max-width: 600px) {
  .container {
    padding: 15px;
  }
  .project-preview {
    flex-direction: column;
    margin-left: 0;
  }
  .project-preview p {
    width: 95%;
  }
  .project-preview img {
    flex: none;
    width: 90%;
    max-width: none;
    height: auto;
  }
  html {
    font-size: 16px;
  }
  p {
    max-width: 100%;
    line-height: 1.8;
  }
  .projects-btn {
  }
  .main-heading,
  .main-heading-homepage {
    font-size: 1.3rem;
    padding-left: 0;
  }
  .links {
    display: flex;
    justify-content: center;
    gap: 36px;
    flex-wrap: wrap;
  }
  .quick-summary,
  .project-image,
  .project-details {
    width: 100%;
    max-width: 100%;
    margin-left: 0px;
    margin-right: 0px;
  }
  .quick-summary {
    font-size: 1.1rem;
  }
  .mii-chat {
    float: none;
    width: 100%;
    margin: 30px 0;
  }
  .mii-chat .chat-avatar {
    width: 40px;
    margin-bottom: 0;
    border-radius: 8px;
    border-color: var(--counter);
  }
  .chat-bubble {
    background: rgba(255, 255, 255, 0.05);
    padding: 0 8px;
    border-radius: 8px;
    border-right: 4px solid var(--accent);
    max-width: 100%;
    margin-left: 0;
  }
  .chat-bubble p {
    margin: 2;
    line-height: 1.3;
    font-size: 0.95rem;
  }
  .links2 {
  }
  .links2:active {
    color: #fff;
    text-shadow: 
      1px 1px 6px var(--accent),
      -1px -1px 6px var(--counter);
  }
  .container h2:hover {
    transform: scale(1.075);
  }
}

